@@ -179,6 +179,7 @@ GPU_OBJS = \
 	stage1_core_sm20.ptx \
 	stage1_core_sm30.ptx \
 	stage1_core_sm35.ptx \
+	stage1_core_sm50.ptx \
 	cub/built
 
 #---------------------------------- NFS file lists -------------------------
@@ -320,5 +321,8 @@ stage1_core_sm30.ptx: $(NFS_GPU_HDR)
 stage1_core_sm35.ptx: $(NFS_GPU_HDR)
 	$(NVCC) -arch sm_35 -ptx -o $@ $<
 
+stage1_core_sm50.ptx: $(NFS_GPU_HDR)
+	$(NVCC) -arch sm_50 -ptx -o $@ $<
+
 cub/built:
-	cd cub && make WIN=$(WIN) WIN64=$(WIN64) sm=200,300,350 && cd ..
+	cd cub && make WIN=$(WIN) WIN64=$(WIN64) sm=200,300,350,520 && cd ..
